Update - propriedades do CSS e add link em span-tag

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -51,7 +51,7 @@
 
         <div class="container">
             <div class="content-text">
-                <span class="span-tag">Mindfulness</span>
+                <a href="sobre-mindfulness.html"><span class="span-tag">Mindfulness</span></a>
 
                 <h1>UM ESPAÇO PARA VOCÊ RESPIRAR E SE ENCONTRAR</h1>
 
