--- a/site/public/cadastro.html
+++ b/site/public/cadastro.html
@@ -8,7 +8,7 @@
 
     <title>Plumeria</title>
 
-    <script src="./js/functions.js"></script>
+    <script src="./js/funcoes.js"></script>
     <script src="./js/cadastro.js"></script>
 
     <link rel="icon" href="./assets/plumeria-icon.png">
