--- a/site/public/login.html
+++ b/site/public/login.html
@@ -8,7 +8,7 @@
 
     <title>Plumeria</title>
 
-    <script src="./js/functions.js"></script>
+    <script src="./js/funcoes.js"></script>
 
     <link rel="icon" href="./assets/plumeria-icon.png">
     <link rel="stylesheet" href="css/style.css">
