Update - Links do header e retirada do Contato

--- a/site/public/login.html
+++ b/site/public/login.html
@@ -37,8 +37,7 @@
                     <ul class="list-item">
                         <li><a href="index.html">Início</a></li>
                         <li><a href="sobre-nos.html">Sobre nós</a></li>
-                        <li><a href="sobre-nos.html">Sobre mindfulness</a></li>
-                        <li><a href="contato.html">Contato</a></li>
+                        <li><a href="sobre-mindfulness.html">Sobre mindfulness</a></li>
                         <li><a href="cadastro.html">Cadastro</a></li>
                     </ul>
                 </nav>
