Update - Logo com rotation no CSS e ajuste no caminhoo do icon

--- a/site/public/cadastro.html
+++ b/site/public/cadastro.html
@@ -30,7 +30,7 @@
             <div class="container">
                 <div class="logo" id="logo">
                     <a href="index.html">
-                        <img src="assets/plumeria-icon.png" alt="icone de uma plumeria">
+                        <img class="rotate" src="assets/plumeria-icon.png" alt="icone de uma plumeria">
                         <span class="nome-logo">Plumeria</span>
                     </a> 
                 </div>
