--- a/site/public/dashboard/dashboard.html
+++ b/site/public/dashboard/dashboard.html
@@ -11,7 +11,7 @@
     <script src="../js/funcoes.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-    <link rel="icon" href="./assets/plumeria-icon.png">
+    <link rel="icon" href="../assets/plumeria-icon.png">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/dashboards.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +25,7 @@
             <div class="container">
                 <div class="logo" id="logo">
                     <a href="../index.html">
-                        <img src="../assets/plumeria-icon.png" alt="icone de uma plumeria">
+                        <img class="rotate" src="../assets/plumeria-icon.png" alt="icone de uma plumeria">
                         <span class="nome-logo">Plumeria</span>
                     </a> 
                 </div>
