--- a/site/public/login.html
+++ b/site/public/login.html
@@ -28,7 +28,7 @@
             <div class="container">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="assets/plumeria-icon.png" alt="icone de uma plumeria">
+                        <img class="rotate" src="assets/plumeria-icon.png" alt="icone de uma plumeria">
                         <span class="nome-logo">Plumeria</span>
                     </a> 
                 </div>
