--- a/site/public/login.html
+++ b/site/public/login.html
@@ -38,7 +38,7 @@
                 <nav class="navbar">
                     <ul class="list-item">
                         <li><a href="index.html">Início</a></li>
-                        <li><a href="sobre-nos.html">Sobre nós</a></li>
+                        <li><a href="index.html#sec-quem-sou-eu">Sobre nós</a></li>
                         <li><a href="sobre-mindfulness.html">Sobre mindfulness</a></li>
                         <li><a href="cadastro.html">Cadastro</a></li>
                     </ul>
@@ -132,7 +132,7 @@
                 <div class="links">
                     <h2>Links</h2>
                     <ul class="lista-links-footer">
-                        <li><a href="sobre-nos.html">Sobre Nós</a></li>
+                        <li><a href="index.html#sec-quem-sou-eu">Sobre Nós</a></li>
                         <li><a href="sobre-mindfulness.html">Sobre Mindfulness</a></li>
                         <li><a href="termos.html">Termos de Serviço</a></li>
                         <li><a href="cadastro.html">Cadastro</a></li>
