Update - Estilização dos títulos, sigilo, e font-family do mural

--- a/site/public/dashboard/edicao-mensagem.html
+++ b/site/public/dashboard/edicao-mensagem.html
@@ -143,7 +143,9 @@
     
                                 <div class="sigilo">
                                     <p>
-                                        Essa mensagem é apenas para você! Prezamos pelo seu sigilo e não compartilhamos ou analisamos nenhuma informação.
+                                        Essa mensagem é apenas para você! 
+                                        <br>
+                                        Prezamos pelo seu sigilo e não compartilhamos ou analisamos nenhuma informação.
                                     </p>
                                 </div>
                             </form>
