Update - Resolvido bug do form - Tag 'form' HTML para 'div'

--- a/site/public/dashboard/edicao-mensagem.html
+++ b/site/public/dashboard/edicao-mensagem.html
@@ -101,7 +101,7 @@
                         </div>
     
                         <div class="div-form">
-                            <form class="form-postagem" id="form_postagem" method="post" onsubmit="return publicar()">
+                            <div class="form-postagem" id="form_postagem" method="post" onsubmit="return publicar()">
                                 <div class="div_inputNaoEditar" onclick="eventoNaoEditar()">
                                     <input placeholder="ID: " id="input_id" maxlength="100" type="text" disabled>
                                 </div>
@@ -148,7 +148,7 @@
                                         Prezamos pelo seu sigilo e não compartilhamos ou analisamos nenhuma informação.
                                     </p>
                                 </div>
-                            </form>
+                            </div>
                         </div>
                     </div>
                 </div>
