Update - Mudança no HTML do drop-funcionalidade, add icones e diminuir tamanho

--- a/site/public/dashboard/dashboard.html
+++ b/site/public/dashboard/dashboard.html
@@ -87,9 +87,6 @@
             </div>
         </header>
 
-        <a href="mural.html">Mural de mensagem</a>
-
-
         <!-- Drop Downd de Funcionalidades -->
         <div class="container-all">
             <section class="drop-funcionalidade">
@@ -105,19 +102,25 @@
                     <div class="drop-funcionalidades">
                         <div class="lista-apoio-drop-func">
                             <a href="minha-plumeria.html">
-                                <img src="../assets/icones-drop-funcionalidades/lista-apoio-icone-drop.svg" alt="icone de lista de apoio">
+                                <img src="../assets/icones-drop-funcionalidades/lista-apoio-icone-drop.svg" alt="ícone de lista de apoio">
                             </a>
                         </div>
         
                         <div class="temporizador-drop-func">
                             <a href="minha-plumeria.html">
-                                <img src="../assets/icones-drop-funcionalidades/temporizador-icone-drop.svg" alt="icone de lista de apoio">
+                                <img src="../assets/icones-drop-funcionalidades/temporizador-icone-drop.svg" alt="ícone de temporizador">
+                            </a>
+                        </div>
+
+                        <div class="mural-drop-func">
+                            <a href="mural.html">
+                                <img src="../assets/icones-drop-funcionalidades/mural-icone-drop.svg" alt="ícone de mural de mensagens">
                             </a>
                         </div>
         
                         <div class="dashboard-drop-func">
                             <a href="dashboard.html">
-                                <img src="../assets/icones-drop-funcionalidades/dashboard-icone-drop.svg" alt="icone de lista de apoio">
+                                <img src="../assets/icones-drop-funcionalidades/dashboard-icone-drop.svg" alt="ícone de dashboard">
                             </a>
                         </div>                
                     </div>
