--- a/site/public/dashboard/minha-plumeria.html
+++ b/site/public/dashboard/minha-plumeria.html
@@ -18,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
 
-<body onload="validarSessao(), atualizarFeed()">
+<body onload="validarSessao()">
 
     <div class="div_backgroundBalls">
         <div class="div_Balls1"></div>
