Add - Nova tela de apenas mural, estilização no CSS e corecção dos windown.location

--- a/site/public/dashboard/minha-plumeria.html
+++ b/site/public/dashboard/minha-plumeria.html
@@ -18,8 +18,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
 
-<!-- onload="validarSessao()" -->
-<body >
+<body onload="validarSessao()">
 
     <div class="div_backgroundBalls">
         <div class="div_Balls1"></div>
@@ -107,7 +106,7 @@
                     </div>
 
                     <div class="mural-drop-func">
-                        <a href="mural.html">
+                        <a href="apenas-mural.html">
                             <img src="../assets/icones-drop-funcionalidades/mural-icone-drop.svg" alt="ícone de mural de mensagens">
                         </a>
                     </div>
