--- a/site/public/dashboard/dashboard.html
+++ b/site/public/dashboard/dashboard.html
@@ -21,7 +21,6 @@
 </head>
 
 <body>
-
     <div class="div_backgroundBalls">
         <div class="div_Balls1"></div>
         <div class="div_BallsHeader1"></div>
@@ -113,7 +112,7 @@
                         </div>
 
                         <div class="mural-drop-func">
-                            <a href="mural.html">
+                            <a href="apenas-mural.html">
                                 <img src="../assets/icones-drop-funcionalidades/mural-icone-drop.svg" alt="ícone de mural de mensagens">
                             </a>
                         </div>
