Update - Display none na bubble para aparecer lava lamp 1º

--- a/site/public/dashboard/minha-plumeria.html
+++ b/site/public/dashboard/minha-plumeria.html
@@ -225,14 +225,14 @@
         </section>
 
         <div class="div_container_auxiliares">
-            <div id="containerBubbles">
+            <div id="containerBubbles" style="display: none;">
                 <div class="bubbles" id="bubbles">
                     <button class="btn_passar" id="btn_bubble" onclick="sortearCorBubble()">Sortear cor</button>
                     <button class="btn_passar" id="btn_passarBubble" onclick="passarBubbleLamp()">Lava Lamp ></button>
                 </div>
             </div>
     
-            <div id="containerLavaLamp" style="display: none;">
+            <div id="containerLavaLamp">
                 <div class="lamp">
                     <div class="glass">
                       <div class="lava">
