--- a/site/public/login.html
+++ b/site/public/login.html
@@ -39,7 +39,6 @@
                     <ul class="list-item">
                         <li><a href="index.html">Início</a></li>
                         <li><a href="index.html#sec-quem-sou-eu">Sobre nós</a></li>
-                        <li><a href="sobre-mindfulness.html">Sobre mindfulness</a></li>
                         <li><a href="cadastro.html">Cadastro</a></li>
                     </ul>
                 </nav>
@@ -112,9 +111,7 @@
                         <img src="./assets/circle-loading.gif" id="loading-gif">
                     </div>
     
-                    <div class="div_errosLogin" id="div_erros_login">
-    
-                    </div>
+                    <div class="div_errosLogin" id="div_erros_login"></div>
               </div>
             </div>
           </section>
@@ -133,7 +130,6 @@
                     <h2>Links</h2>
                     <ul class="lista-links-footer">
                         <li><a href="index.html#sec-quem-sou-eu">Sobre Nós</a></li>
-                        <li><a href="sobre-mindfulness.html">Sobre Mindfulness</a></li>
                         <li><a href="termos.html">Termos de Serviço</a></li>
                         <li><a href="cadastro.html">Cadastro</a></li>
                         <li><a href="login.html">Login</a></li>
