Update - Retirada de função do body do tutorial

--- a/site/public/dashboard/tutorial.html
+++ b/site/public/dashboard/tutorial.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
 
-<body onload="validarSessao(), listarInfosDeUm()">
+<body onload="validarSessao()">
 
     <div class="div_backgroundBalls">
         <div class="div_Balls1"></div>
